--- a/playroom/.classpath
+++ b/playroom/.classpath
@@ -11,7 +11,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Dev/eclipse/lombok.jar">
+	<classpathentry kind="lib" path="C:/Users/sec/eclipse/jee-2022-06/eclipse/lombok.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
